fix: modify way to save croppedImage

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,9 +15,9 @@ body {
 
 .content {
   width: 100%;
-  max-width: 540px;
+  max-width: 460px;
 
-  &>div {
+  & > div {
     margin: 24px 0;
   }
 }
